--- a/auth_project/pubspec.yaml
+++ b/auth_project/pubspec.yaml
@@ -10,9 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.8.1
-  cloud_firestore: ^5.5.1
   firebase_auth: ^5.3.4
   firebase_storage: ^12.3.7
+  fluttertoast : ^8.2.2
+  cloud_firestore: ^5.6.0
+  google_sign_in: ^6.2.2
+  font_awesome_flutter: ^10.8.0
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
